--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-29 00:47:29
+lastsearch = 2024-07-29 04:48:53
 
 [www.tiktok.com]
 match = -35.3%%
@@ -590,4 +590,9 @@ url = https://www.providentlawyers.com/5-new-arizona-laws-that-affect-owners-and
 match = -23.5%%
 title = Khởi Đầu Tốt Đẹp - 16 Cành H525
 url = http://hoacuatroi.com/lan-ho-diep-1821/khoi-dau-tot-dep-16-canh-h525-91218/
+
+[www.rockawayinc.com]
+match = 0.0%%
+title = 
+url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
