--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-29 03:45:28
+lastsearch = 2024-07-29 04:49:17
 
 [www.tiktok.com]
 match = -193.8%%
@@ -129,7 +129,7 @@ url = https://www.instagram.com/boots_tagram23/p/C8kypfiPAue/
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=lv_LV
 
 [www.espn.com]
 match = -93.8%%
@@ -212,8 +212,8 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -200.0%%
-title = new rolex yachtmaster - rolex yacht master price new ...
+match = -175.0%%
+title = new rolex yachtmaster - rolex yacht master price new
 url = https://mechanicaldesign-job.com/products/fpftgfny-42/
 
 [www.veryberryfrozenyogurt.com]
