--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-29 06:24:33
+lastsearch = 2024-07-29 09:48:07
 
 [demxanh.com]
 match = -94.1%%
 title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
-url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html?srsltid=AfmBOoqFTgsI23XQqLJX_0L38CtX8a8OrkF9vAfzzHJW5tuRzoaAMA58
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -64.7%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 140x190cm
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-140x190cm-34.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -85,4 +85,9 @@ url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 match = 30.0%%
 title = Chiếu Trúc
 url = https://www.nemsaithanh.com/san-pham/chieu-truc-135.html
+
+[khodem.vn]
+match = -158.8%%
+title = Chiếu Trúc Hương Trúc - Chiếu nằm mùa hè cao cấp - Kho đệm
+url = https://khodem.vn/chieu-truc-huong-truc/
 
