--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-29 04:45:49
+lastsearch = 2024-07-29 09:47:06
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -21.4%%
-title = 12.12: The Day
-url = https://en.wikipedia.org/wiki/12.12:_The_Day
+match = -45.5%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -160.0%%
@@ -162,9 +162,9 @@ title = Fele annyiba se kerül a "Faker Ahri" szobor, mint a LoL-os ...
 url = https://leetgaming.com/2024/06/12/lol-league-of-legends-faker-skincsomag-ar-figura-cikk/
 
 [www.thespike.gg]
-match = -90.0%%
-title = Nuclear GC vs URACHACHA GC | VALORANT Game ...
-url = https://www.thespike.gg/br/match/nuclear-gc-urachacha-gc/120558
+match = -105.0%%
+title = Mir Gaming GC vs URACHACHA GC | VALORANT Game ...
+url = https://www.thespike.gg/br/match/mir-gaming-gc-urachacha-gc/120559
 
 [sensiblepsych.my-free.website]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -115.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.vlr.gg]
 match = -145.0%%
