--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-29 05:45:18
+lastsearch = 2024-07-29 10:42:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối sông hồng urban SH_UC23 031
 url = https://dongahome.vn/chan-ga-goi-song-hong-urban-sh_uc23-031
 
 [demhong.vn]
-match = -42.3%%
-title = Chăn ga gối Sông Hồng không chần 100%% cotton Solid
-url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
+match = 0.0%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC11
+url = https://demhong.vn/chan-ga-goi-song-hong-uc11/
 
 [chandem.com.vn]
 match = 34.6%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -11.5%%
-title = Bộ Chăn Ga Gối Cotton Poly 4 món - Happy Bedding
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-4-món-Bộ-chăn-ga-bộ-ga-giường-drap-nệm-mền-Happy-Bedding-(Miễn-phí-bo-chun)-i.483546614.10240511269
+match = 7.7%%
+title = bộ Chăn Ga Gối Cotton 3F Kẻ Ngang-màu đen
+url = https://shopee.vn/bộ-Chăn-Ga-Gối-Cotton-3F-Kẻ-Ngang-màu-đen-i.99089604.5287351365
 
 [bedding.vn]
 match = -42.3%%
