--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-29 06:56:52
+lastsearch = 2024-07-29 10:32:47
 
 [www.kymdan.com]
 match = 4.2%%
@@ -112,7 +112,7 @@ title = Bộ chăn ga gối Tencel Dreamtex DTF-004 - Nệm Tuan Thao
 url = https://everonthuduc.vn/san-pham/bo-chan-ga-goi-tencel-dreamtex-dtf-004/
 
 [khodem.vn]
-match = -3.1%%
-title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương
+match = -28.1%%
+title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương - Kho đệm
 url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
 
