--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-29 06:20:22
+lastsearch = 2024-07-29 10:47:12
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -12,9 +12,9 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -40.0%%
+title = chiếu trúc tăm HT cao cấp 2mx2.2m
+url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -106.7%%
-title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -186.7%%
