--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-28 21:18:25
+lastsearch = 2024-07-29 10:42:24
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -187.5%%
-title = Điểm du lịch Khánh Hòa – List 18 “TỌA ĐỘ” không thể bỏ ...
-url = https://vinpearl.com/vi/list-18-diem-du-lich-khanh-hoa-dep-xieu-long-khong-the-bo-qua
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
+url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -72,9 +72,9 @@ title = Top 18 địa điểm du lịch DakLak nổi tiếng không thể bỏ l
 url = https://mia.vn/cam-nang-du-lich/top-dia-diem-du-lich-daklak-noi-tieng-khong-the-bo-lo-5670
 
 [www.ivivu.com]
-match = -187.5%%
-title = Du lịch Phú Yên mê mẩn tại 18 điểm tham quan nổi tiếng
-url = https://www.ivivu.com/blog/2024/05/du-lich-phu-yen-me-man-tai-18-diem-tham-quan-noi-tieng/
+match = -100.0%%
+title = Du lịch New York đừng quên 18 địa danh này
+url = https://www.ivivu.com/blog/2017/09/du-lich-new-york-dung-quen-18-dia-danh-nay/
 
 [www.dulichxanh.com.vn]
 match = -143.8%%
@@ -305,4 +305,9 @@ url = https://www.ustraveldocs.com/vn_vn/vn-niv-visarenew.asp
 match = -6.2%%
 title = QUY ĐỊNH VÀ ĐIỀU KHOẢN
 url = https://www.vietrantour.com.vn/no-category/quy-dinh-va-dieu-khoan.html
+
+[hungyen.dcs.vn]
+match = -193.8%%
+title = Chương trình Xúc tiến Du lịch - Điện ảnh Việt Nam tại Hoa Kỳ
+url = https://hungyen.dcs.vn/chuong-trinh-xuc-tien-du-lich-dien-anh-viet-nam-tai-hoa-ky-c219915.html
 
