--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-29 06:37:00
+lastsearch = 2024-07-29 10:40:21
 
 [demxanh.com]
 match = -135.3%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooEdjfXfQROR1bIAWWda2AZ-Nbu5wUswsqcFu5pfCYeS1HsGzDz
 
 [dem24h.vn]
 match = -29.4%%
