--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:56:32
 lastsearch = 2024-07-29 10:26:35
 
 [hanvico.net.vn]
-match = -42.1%%
-title = Ruột gối lông vũ cao cấp 30x50 - Hanvico
-url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
+match = -10.5%%
+title = Ruột gối lông vũ cao cấp - Hanvico
+url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
@@ -52,9 +52,9 @@ title = Ruột Gối Nằm Cao Cấp À Ơi Concept 50x70cm (01 cái)
 url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-01-cai-gon-bong-hat-long-vu
 
 [jysk.vn]
-match = -100.0%%
-title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
-url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
+match = 31.6%%
+title = Ruột gối lông vũ - JYSK.vn
+url = https://jysk.vn/ruot-goi-long-vu
 
 [shopee.vn]
 match = -142.1%%
