--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-29 06:18:34
+lastsearch = 2024-07-29 10:50:38
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgkHLsj9&sig=ACfU3U0hnVKJiACvkLsSgo_Zh_PrI-3DsQ&hl=en&sa=X&ved=2ahUKEwjMkY-178qHAxUmHzQIHXh2CpwQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgkJIlld&sig=ACfU3U3DLwjqMuS1G57ngAgL0oyYf3WGbQ&hl=en&sa=X&ved=2ahUKEwjE64CdrMuHAxUzMlkFHSTTJJUQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
