--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-29 09:09:53
+lastsearch = 2024-07-29 10:44:27
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -77,9 +77,9 @@ title = Top 10 Thảm Trải Sàn tốt nhất hiện nay (Tư vấn mua 2024)
 url = https://vn.my-best.com/37075
 
 [www.airbnb.com.vn]
-match = -136.4%%
-title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
-url = https://www.airbnb.com.vn/rooms/1104230023148123684
+match = -122.7%%
+title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
+url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
 match = -40.9%%
@@ -140,4 +140,9 @@ url = https://en.tripadvisor.com.hk/ShowUserReviews-g1507054-d14162961-r63136772
 match = -90.9%%
 title = Khách sạn giá rẻ gần Tokmanni Leppävirta, Leppavirta
 url = https://vn.trip.com/hotels/leppavirta-tokmanni-leppvirta/hotels-c56246m28561957/
+
+[www.booking.com]
+match = -109.1%%
+title = Location Berck T II Confort Balcon Front de mer Plage
+url = https://www.booking.com/hotel/fr/appartement-type-ii-confort-balcon-front-de-mer-berck.vi.html
 
