--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-29 04:36:00
+lastsearch = 2024-07-29 11:43:57
 
 [tiki.vn]
-match = -122.2%%
-title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
+match = -138.9%%
+title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
-match = -144.4%%
-title = Bộ Chăn Drap Gối Cao Cấp Bọc Màu Thêu (vỏ chăn) – Xám
-url = http://nemxinh.net/bo-chan-drap-goi-cao-cap-boc-mau-theu-vo-chan-xam-p67.html
+match = 50.0%%
+title = Kích thước 160x200
+url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
 match = -188.9%%
