--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-29 10:38:56
+lastsearch = 2024-07-29 11:31:55
 
 [www.facebook.com]
-match = -141.2%%
-title = Mom asked "have anyone heard of Mo Dan? My fren ...
-url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-of-mo-dan-my-fren-has-been-fever-on-and-off-for-almo/10150974043136876/
+match = -182.4%%
+title = Mothership - The Mao Shan Wang durians are priced at S ...
+url = https://www.facebook.com/MothershipSG/posts/the-mao-shan-wang-durians-are-priced-at-s8-per-kg/892901902878579/
 
 [www.teadrunk.com]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
-match = 20.0%%
-title = Chinese polearm
-url = https://en.wikipedia.org/wiki/Chinese_polearm
+match = 0.0%%
+title = Qin Shi Huang
+url = https://en.wikipedia.org/wiki/Qin_Shi_Huang
 
 [www.amazon.com]
 match = -135.3%%
@@ -143,8 +143,8 @@ url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
 match = -194.1%%
-title = Nine traditional Chinese herbal formulas for the treatment ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
+title = Formononetin: A Review of Its Anticancer Potentials and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6676344/
 
 [books.google.com]
 match = -7.7%%
@@ -275,4 +275,9 @@ url = https://f1000.com/work/bibliography/5538358
 match = -223.5%%
 title = Maxalt (Rizatriptan Benzoate): Side Effects, Uses, Dosage, ...
 url = https://www.rxlist.com/maxalt-drug.htm
+
+[pesquisa.bvsalud.org]
+match = -35.3%%
+title = Search | Global Index Medicus
+url = https://pesquisa.bvsalud.org/gim/?lang=enauMartinsNetoViviana&q=au:"An-yun MAO"
 
